<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.zameenbaaazar.zameenbaazar.VerificationActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
     android:layout_margin="40dp"
    android:layout_gravity="center"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/displayInVerification"
        android:textSize="20sp"
        android:textAlignment="center"

        />
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="12dp"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/verificationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:id="@+id/verificationCodeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLines="1"
            android:hint="@string/verificationCode"
            android:layout_margin="12dp"/>
    </android.support.design.widget.TextInputLayout>

   <Button
       android:id="@+id/verifybtn"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:layout_gravity="center"
       android:text="@string/Enter"
       android:layout_marginTop="6dp"/>
</LinearLayout>
    
</LinearLayout>
